--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,6 @@
 body {
   background-color: #EEF0EB;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .App {
@@ -90,6 +91,7 @@ body {
 }
 
 .input-container input {
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   width: 90%;
   height: 100%;
   border: 1px solid #3A4D39;
@@ -119,6 +121,7 @@ body {
   height: 5vh;
   margin-left: 1%;
   margin-right: 1%;
+  margin-bottom: 2%;
   display: flex;
   margin-top: 1%;
   padding: 1% 2%;
@@ -133,7 +136,7 @@ body {
 .search-bar input {
   flex-grow: 1;
   color: #153243;
-  font-family: "Inter", sans-serif;
+  /* font-family: "Inter", sans-serif; */
   font-size: 14px;
   font-style: normal;
   justify-content: flex-start;
@@ -153,4 +156,48 @@ body {
   justify-content: flex-end;
   padding: 0; 
   margin-left: 10px; 
+}
+
+.dropdown-levels .dropbtn {
+  display: block;
+  width: 100%;
+  margin-bottom: 10px;
+  border: 1px solid #153243;  
+
+}
+
+.dropbtn {
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  border: 1px solid #153243;  
+  background-color: #B4B8AB;
+  color: #153243;
+  border-radius: 10px;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+.dropdown-content {
+  background-color: #EEF0EB;
+  display: none;
+  position: absolute;
+  /* background-color: #f9f9f9; */
+  width: 100%;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: #153243;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+.dropdown:hover .dropbtn {
+  background-color: #EEF0EB;
 }
