--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,14 +6,14 @@
 }
 
 @font-face {
-    font-family: 'Muli';
+    font-family: 'Muli light';
     font-style: normal;
     font-weight: 300;
     src: url("./fonts/Muli-Light.woff");
 }
 
 @font-face {
-    font-family: 'Muli';
+    font-family: 'Muli bold';
     font-style:normal;
     font-weight: 500;
     src: url("./fonts/Muli-Bold.woff");
@@ -32,6 +32,7 @@
     --text-1-hover: #458ff6;
     --text-2: #000;
     --text-3: #7d7987;
+    --btn-bg-active: rgba(229, 233, 246, 0.4);
     --btn-1-color: #fff;
     --btn-1-bg: #458ff6;
     --btn-1-bg-hover: #1472f4;
@@ -323,7 +324,7 @@ main {
     color: var(--text-2);
 }
 
-h1, h2, h3 {
+h1, h2, h3, h4, h5, h6 {
     margin: 0;
 }
 
@@ -357,7 +358,12 @@ h1, h2, h3 {
     margin: 26px auto 0;
 }
 
+.selected .underline-1 {
+    margin: 10px auto 0;
+}
+
 .underline-1 {
+    margin: 26px auto 0;
     width: 56px;
     height: 2px;
     background-color: var(--text-2);
@@ -403,7 +409,7 @@ h1, h2, h3 {
     color: var(--text-3);
 }
 
-p {
+p, h5, h6 {
     margin-bottom: 1rem;
 }
 
@@ -468,12 +474,12 @@ footer {
     padding-top: 100px;
 }
 
-.table {
+/* .table {
     position: relative;
     padding: 64px 118px 64px;
     background: var(--testimonials-bg);
     border-radius: 24px;
-}
+} */
 
 
 .dropdown:first-child {
@@ -488,6 +494,8 @@ footer {
     height: 50px !important;
     background-color: var(--btn-1-color) !important;
     color: var(--text-1) !important;
+    text-transform: none !important;
+    font-family: 'Muli' !important;
 }
 
 .dropdown-content {
@@ -528,4 +536,56 @@ form input {
 
 .hidden {
 display: none;
+}
+
+.selected .container .row h5 {
+    font-weight: 500;
+    font-size: 1.5rem;
+    line-height: 56px;
+    text-align: center;
+    color: var(--text-2);
+}
+
+.result-row {
+    height: 100px;
+    display: flex;
+    background-color: var(--article-bg);
+    margin-top: 20px;
+    align-items: center;
+    border: 1px solid rgba(25, 118, 210, 0.5);
+    gap: 40px;
+}
+
+.result-row p {
+    flex: 1;
+    padding-left: 20px;
+    padding-top: 20px;
+}
+
+.result-row .MuiBox-root {
+    padding-top: 35px;
+    padding-right: 25px;
+}
+
+.total .container .row div {
+    margin-top: 30px;
+    text-align: right;
+    padding-right: 20px;
+}
+
+.total .container .row p {
+    background-color: var(--article-bg);
+    height: 50px;
+    width: 70px;
+    text-align: right;
+    font-size: 20px;
+    font-weight: bold;
+    line-height: 50px;
+    text-align: center;
+    margin-left: auto;
+    border: 1px solid rgba(25, 118, 210, 0.5);
+}
+
+.total .container .row h5 {
+    padding-right: 15px;
 }
