--- a/client/src/App.css
+++ b/client/src/App.css
@@ -536,7 +536,16 @@ form input {
 }
 
 .hidden {
-display: none;
+    display: none;
+}
+
+.results .container .row .closebnt {
+    width: 120px;
+    font-size: 11px;
+    margin-left: auto;
+    margin-right: 13px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .selected .container .row h5 {
@@ -568,7 +577,7 @@ display: none;
 }
 
 .result-row .MuiButtonBase-root {
-    padding-right: 30px;
+    margin-right: 30px;
 }
 
 .total .container .row div {
