--- a/client/src/App.css
+++ b/client/src/App.css
@@ -71,6 +71,10 @@ html {
 }
 
 body {
+    position: relative;
+    margin: 0;
+    padding-bottom: 100px; 
+    min-height: 100vh;
     font-family: 'Muli', sans-serif !important;
     overflow-x: hidden;
     margin: 0;
@@ -82,7 +86,7 @@ body {
     background-color: #FAFAFA !important;
 }
 
-html, div, main, .header, .landing-page, .services, .search-bar, footer {
+html, div, main, .header, .landing-page, .services, .search-bar {
     display: block;
 } 
 
@@ -280,6 +284,7 @@ li {
 
 main {
     overflow: hidden;
+    margin-bottom: 150px;
 }
 
 .landing-page, .services, .search-bar {
@@ -429,9 +434,11 @@ p, h5, h6 {
 }
 
 footer {
-    position: relative;
-    margin-top: 151px;
-    padding: 58px 0 23px;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    padding-top: 20px;
+    margin-top: 100px;
     color: var(--footer-text);
     background: var(--footer-bg);
 }
