--- a/client/src/App.css
+++ b/client/src/App.css
@@ -367,7 +367,7 @@ h1, h2, h3, h4, h5, h6 {
     margin: 26px auto 0;
 }
 
-.selected .underline-1, .search-bar .container .row .underline-1, .medicamentos-selecionados .container .underline-1 {
+.selected .underline-1, .search-bar .container .row .underline-1, .medicamentos-selecionados .container .underline-1, .human-body .container .underline-1, .search-bar .container .underline-1 {
     margin: 10px auto 0;
 }
 
@@ -570,7 +570,7 @@ form .btn-2 {
 /* AVALIAÇÂO */
 
 .results .row .closebnt {
-    width: 120px;
+    width: 140px;
     font-size: 11px;
     margin-left: auto;
     margin-right: 13px;
@@ -582,6 +582,10 @@ form .btn-2 {
     display: flex;
     justify-content: space-between;
     gap: 20px; 
+}
+
+.injury-assessment .results .row h6:nth-of-type(2) {
+    margin-top: 10px;
 }
 
 .selected .row h5 {
@@ -637,13 +641,6 @@ form .btn-2 {
     padding: 10px;
 }
 
-
-.total .row div {
-    margin-top: 30px;
-    text-align: right;
-    padding-right: 20px;
-}
-
 .total .row p {
     background-color: var(--article-bg);
     height: 50px;
@@ -658,14 +655,41 @@ form .btn-2 {
 }
 
 .total .row h5 {
-    padding-right: 15px;
+    margin-left: 9px;
+}
+
+.css-mhc70k-MuiGrid-root h5 {
+    padding-left: 16px;
+    padding-top: 16px;
+    font-size: 1rem !important;
+}
+
+.total-row {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start; 
+    padding: 10px;
+    margin-top: 30px;
+    text-align: right;
+    padding-right: 20px;
+}
+
+.total-content {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.total-content p {
+    margin-left: 0 !important;
+}
+
+.submitbtn {
+    margin-right: 0 !important; 
 }
 
 /* HUMAN BODY */
-
-.human-body {
-    padding-top: 70px;
-}
 
 .body-results {
     padding: 20px;
@@ -728,14 +752,14 @@ form .btn-2 {
 }
 
 .MuiFormControl-root{
-    width: 400px;
+    width: 500px;
 }
 
 .MuiFormControl-root legend{
     margin-top: 5px;
 }
 
-.search-bar .container .row h6, .medicamentos-selecionados .container h6 {
+.search-bar .container .row h6, .medicamentos-selecionados .container h6, .human-body .container h6, .search-bar .container h6 {
     font-weight: 500;
     font-size: 1.1rem;
     line-height: 50px;
@@ -748,10 +772,54 @@ form .btn-2 {
     margin-top: 20px;
 }
 
+/* MEDICAMENTOS-DOENÇAS */
+
 .medicamentos-selecionados.pesquisa .container h6 {
     margin-top: 30px;
     font-size: 1rem;
 }
+
+.MuiAutocomplete-root{
+    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-right: 5px;
+}
+
+.medicamentos-selecionados .container .submitbtn {
+    float: right;
+}
+
+.css-tlc64q-MuiPaper-root-MuiDialog-paper, .css-1t1j96h-MuiPaper-root-MuiDialog-paper  {
+    padding: 10px !important;
+    border-radius: 10px !important;
+}
+
+.css-qfso29-MuiTypography-root-MuiDialogContentText-root {
+    font-family: 'Muli' !important;
+    font-size: 1.1rem !important;
+    text-align: center !important;
+    color: var(--text-1) !important;
+    margin-bottom: 30px !important;
+    display: flex !important;
+    align-items: center !important;
+}
+
+.css-2ulfj5-MuiTypography-root {
+    font-family: 'Muli' !important;
+    font-size: 1rem !important;
+}   
+
+.css-e784if-MuiTypography-root {
+    font-family: 'Muli Light' !important;
+    font-size: 0.9rem !important;
+}
+
+.confirm-icon, .edit-icon {
+    width: 35px;
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
 /* -------- */
 
 html, body {
@@ -781,6 +849,11 @@ footer {
 
 /* MEN BODY */
 
+
+.human-body .container .row .col-md-3 {
+    margin-left: 37.5%;
+}
+
 .sc-body-model__rotate {
     display: flex;
     flex-direction: column; 
@@ -799,4 +872,11 @@ footer {
     align-items: center;
     height: 50vh !important;
     margin-left: 45%;
+}
+
+/* CONFIGURAR MEDICAMENTOS */
+
+.css-1ualgfl-MuiInputBase-root-MuiOutlinedInput-root-MuiSelect-root {
+    margin-top: 8px;
+    margin-bottom: 4px;
 }
